namespace MIW.ADOO.Runtime
{
    public enum Direction
    {
        None,
        Horizontal,
        Vertical,
        Diagonal,
        InverseDiagonal
    }
}